--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 yew = "0.19"
+rand = { version = "0.6.1", features = ["wasm-bindgen"] }
 
 log = "0.4.6"
 wasm-logger = "0.2.0"
