--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 yew = "0.19"
+
+# NOTE: wasm32-unknown-unknownでrandはfeaturesで指定する必要がある
 rand = { version = "0.6.1", features = ["wasm-bindgen"] }
 
 log = "0.4.6"
